2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in: Say explicit "grub configuration" rather
	than grub.cfg.

2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* coreboot.cfg: Add missing file.

2013-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Allow STRIP to be empty when creating windowszip.

2013-11-19  Axel Kellermann <axel.kellermann@gmx.de>

	* util/grub.d/30_os-prober.in: Add GRUB_OS_PROBER_SKIP_LIST to
	selectively skipping systems.

2013-11-19  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (grub-mkimage): Add
	grub-core/osdep/aros/config.c to extra_dist.
	* conf/Makefile.extra-dist (EXTRA_DIST): Add docs/autoiso.cfg,
	docs/osdetect.cfg, grub-core/gnulib-fix-null-deref.diff,
	grub-core/gnulib-fix-width.diff, grub-core/gnulib-no-abort.diff, and
	grub-core/gnulib-no-gets.diff.

2013-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Add automated filesystem checking based on scripts I've used now for
	quite some time locally. Most of the test require root so they are
	skipped when run without necessarry privelegies.

2013-11-19  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.c (main): Adjust info messages to match
	installed paths of grub-bios-setup and grub-sparc64-setup.

2013-11-19  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install-common.c (copy_locales): Consistently use
	grub_util_get_localedir () rather than LOCALEDIR.
	(grub_install_copy_files): Likewise.

2013-11-19  Josh Triplett  <josh@joshtriplett.org>

	* grub-core/kern/x86_64/efi/startup.S (_start): Align the stack to a
	16-byte boundary, as required by the x86-64 ABI, before calling
	grub_main.  In some cases, GCC emits code that assumes this
	alignment, which crashes if not aligned.  The EFI firmware is also
	entitled to assume that stack alignment without checking.

2013-11-18  Josh Triplett  <josh@joshtriplett.org>

	* grub-core/mmap/efi/mmap.c (grub_mmap_register): Round up/down to