@@ -1,5 +1,10 @@
 2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/lib/crypto.c (grub_crypto_hash): Remove variable length
+	array.
+
+2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub-mkconfig.in: Say explicit "grub configuration" rather
 	than grub.cfg.
 
